I was trying to think of a way to encapsulate the context copying step. I didn't test it, but I think this will work.