@@ -20,11 +20,12 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.node.TextNode;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.springframework.stereotype.Service;
 import org.springframework.web.context.request.RequestAttributes;
 import org.springframework.web.context.request.RequestContextHolder;
@@ -135,21 +136,32 @@ public class DatasetService {
     return createDatasetResponses(roleMap, system);
   }
 
+  static class ContextCopier {
+
+    private final RequestAttributes attributes = RequestContextHolder.getRequestAttributes();
+
+    private ContextCopier() {}
+
+    private <T> void copyToThread(T target) {
+      if (RequestContextHolder.getRequestAttributes() == null) {
+        RequestContextHolder.setRequestAttributes(attributes);
+      }
+    }
+
+    static <S> Stream<S> parallelWithRequest(Stream<S> stream) {
+      // Spring request context is limited to the main thread, in order
+      // to have the token and auth information available, we need to copy
+      // the current thread requestAttributes to the child threads.
+      ContextCopier copier = new ContextCopier();
+      return stream.parallel().peek(copier::copyToThread);
+    }
+  }
+
   public DatasetsListResponse listDatasets() {
-    // Spring request context is limited to the main thread, in order
-    // to have the token and auth information available, we need to copy
-    // the current thread requestAttributes to the child threads
-    RequestAttributes requestAttributes = RequestContextHolder.getRequestAttributes();
     List<DatasetResponse> datasets =
-        new ArrayList<>(
-            Arrays.stream(StorageSystem.values())
-                .parallel()
-                .flatMap(
-                    storageSystem -> {
-                      RequestContextHolder.setRequestAttributes(requestAttributes);
-                      return collectDatasets(storageSystem).stream();
-                    })
-                .toList());
+        ContextCopier.parallelWithRequest(Arrays.stream(StorageSystem.values()))
+            .flatMap(system -> collectDatasets(system).stream())
+            .collect(Collectors.toList());
 
     if (samService.hasGlobalAction(SamAction.READ_ANY_METADATA)) {
       datasets.addAll(
